[package]
name = "tbb"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["tbb_test"]

[dependencies]
# Reduces boilerplate around consuming errors
anyhow = "1.0"
# Used for anything date-related
chrono = "0.4"
# CLI parsing
clap = { version = "4.0", features = ["derive"] }
# Easy colors and styling in the terminal.
# Termcolor is a more rigorous but less ergonomic alternative,
# particularly when it comes to Windows
colored = "2.0"
# Connection to the sqlite database
rusqlite = { version = "0.28", features = ["bundled"] }

[dev-dependencies]
proptest = "1.0"
tbb_test = { path = "tbb_test" }

